# yarp_tutorial

./: .gitignore  README.md
hello_yarp/: .clang-format  CMakeLists.txt  hello.cpp
middle_app_summer/: CMakeLists.txt  summer.cpp
pub_sub/: CMakeLists.txt  README.md  communication.thrift  publisher.cpp  subscriber.cpp
serialized_objects/: CMakeLists.txt  README  README.md  client.cpp  data.hpp  server.cpp
serialized_thrift_1/: README.md  SharedData.thrift  client.cpp  server.cpp
serialized_thrift_2/: .gitignore  README  README.md  server.cpp  settings.thrift
serialized_thrift_3/: CMakeLists.txt  README  README.md  client.cpp  coordinates.thrift  server.cpp
serialized_trift_1/: .gitignore  CMakeLists.txt  README
two_apps_callback/: CMakeLists.txt  client.cpp  server.cpp
two_apps_comm/: CMakeLists.txt  client.cpp  server.cpp
xml_build_script/: README.md  build.py  package.xml
yarp_js/: README.md  client.js  server.js
yarp_python/: README  README.md  reader.py  writer.py
